http://lansuite.orgapage.de/index.php?mod=bugtracker&bugid=798

--- a/trunk/design/osX/style.css
+++ b/trunk/design/osX/style.css
@@ -215,7 +215,6 @@ li.LineLeftHalf {
 
 /* Form fields */
 .form {             /* Form fields, which must be supplied */
-  font-family:  Verdana,Arial,Helvetica;
   font-size:        11px;
   font-weight:  normal;
   color:            #000000;
@@ -225,7 +224,6 @@ li.LineLeftHalf {
 }
 
 .form_optional {    /* Optional form fields, which need not to be supplied */
-  font-family:  Verdana,Arial,Helvetica;
   font-size:        11px;
   font-weight:  normal;
   color:            #000000;
